rust/crates/codec-html/src/snapshots/encode_html_fragments@delete.html.snap
---
source: rust/crates/codec-html/src/encode.rs
expression: encoded
input_file: fixtures/fragments/html/delete.html

---
<article data-itemscope="root" itemtype="http://schema.org/Article" itemscope>
  <div data-itemprop="content">
    <p itemtype="http://schema.stenci.la/Paragraph" itemscope>Some<del itemtype="http://schema.stenci.la/Delete" itemscope>deleted</del>text.</p>
  </div>
</article>
