rust/crates/codec-html/src/snapshots/encode_html_fragments@list.html.snap
---
source: rust/crates/codec-html/src/encode.rs
expression: encoded
input_file: fixtures/fragments/html/list.html

---
<article data-itemscope="root" itemtype="http://schema.org/Article" itemscope>
  <div data-itemprop="content">
    <ul itemtype="http://schema.stenci.la/List" itemscope>
      <li itemtype="http://schema.stenci.la/ListItem" itemscope>
        <p itemtype="http://schema.stenci.la/Paragraph" itemscope>apple</p>
      </li>
      <li itemtype="http://schema.stenci.la/ListItem" itemscope>
        <p itemtype="http://schema.stenci.la/Paragraph" itemscope>pear</p>
      </li>
      <li itemtype="http://schema.stenci.la/ListItem" itemscope>
        <p itemtype="http://schema.stenci.la/Paragraph" itemscope>orange</p>
      </li>
    </ul>
    <ol itemtype="http://schema.stenci.la/List" itemscope>
      <li itemtype="http://schema.stenci.la/ListItem" itemscope>
        <p itemtype="http://schema.stenci.la/Paragraph" itemscope>first</p>
      </li>
      <li itemtype="http://schema.stenci.la/ListItem" itemscope>
        <p itemtype="http://schema.stenci.la/Paragraph" itemscope>second</p>
      </li>
      <li itemtype="http://schema.stenci.la/ListItem" itemscope>
        <p itemtype="http://schema.stenci.la/Paragraph" itemscope>third</p>
      </li>
    </ol>
    <ul itemtype="http://schema.stenci.la/List" itemscope>
      <li itemtype="http://schema.stenci.la/ListItem" itemscope>
        <p itemtype="http://schema.stenci.la/Paragraph" itemscope>nested</p>
        <ul itemtype="http://schema.stenci.la/List" itemscope>
          <li itemtype="http://schema.stenci.la/ListItem" itemscope>
            <p itemtype="http://schema.stenci.la/Paragraph" itemscope>2a</p>
            <ul itemtype="http://schema.stenci.la/List" itemscope>
              <li itemtype="http://schema.stenci.la/ListItem" itemscope>
                <p itemtype="http://schema.stenci.la/Paragraph" itemscope>3a</p>
              </li>
            </ul>
          </li>
          <li itemtype="http://schema.stenci.la/ListItem" itemscope>
            <p itemtype="http://schema.stenci.la/Paragraph" itemscope>2b</p>
          </li>
          <li itemtype="http://schema.stenci.la/ListItem" itemscope>
            <p itemtype="http://schema.stenci.la/Paragraph" itemscope>2c</p>
            <ul itemtype="http://schema.stenci.la/List" itemscope>
              <li itemtype="http://schema.stenci.la/ListItem" itemscope>
                <p itemtype="http://schema.stenci.la/Paragraph" itemscope>3b</p>
                <ul itemtype="http://schema.stenci.la/List" itemscope>
                  <li itemtype="http://schema.stenci.la/ListItem" itemscope>
                    <p itemtype="http://schema.stenci.la/Paragraph" itemscope>4a</p>
                  </li>
                </ul>
              </li>
            </ul>
          </li>
        </ul>
      </li>
    </ul>
    <ol itemtype="http://schema.stenci.la/List" itemscope>
      <li itemtype="http://schema.stenci.la/ListItem" itemscope>
        <em itemtype="http://schema.stenci.la/Emphasis" itemscope>solo inline</em>
      </li>
    </ol>
  </div>
</article>
