rust/crates/codec-html/src/snapshots/encode_html_fragments@non-textual-annotation.html.snap
---
source: rust/crates/codec-html/src/encode.rs
expression: encoded
input_file: fixtures/fragments/html/non-textual-annotation.html

---
<article data-itemscope="root" itemtype="http://schema.org/Article" itemscope>
  <div data-itemprop="content">
    <p itemtype="http://schema.stenci.la/Paragraph" itemscope>Nontextual annotations like<u itemtype="http://schema.stenci.la/NontextualAnnotation" itemscope>this</u>
    </p>
  </div>
</article>
