rust/crates/codec-html/src/snapshots/encode_html_fragments@paragraph.html.snap
---
source: rust/crates/codec-html/src/encode.rs
expression: encoded
input_file: fixtures/fragments/html/paragraph.html

---
<article data-itemscope="root" itemtype="http://schema.org/Article" itemscope>
  <div data-itemprop="content">
    <p itemtype="http://schema.stenci.la/Paragraph" itemscope>First paragraph.</p>
    <p itemtype="http://schema.stenci.la/Paragraph" itemscope>Second paragraph.</p>
    <p itemtype="http://schema.stenci.la/Paragraph" itemscope>Third paragraph,
split over multiple
lines.</p>
  </div>
</article>
